ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/ShakeCharity__c.object-meta.xml
<CustomObject>
    <label>ShakeCharity</label>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>ShakeCharity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ShakeCharity</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>