ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ShakeCharity</relationshipLabel>
    <relationshipName>ShakeCharity</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>