ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/ACCT_PD__c.field-meta.xml
<CustomField>
    <fullName>ACCT_PD__c</fullName>
    <inlineHelpText>ACCOUNTING PERIOD
This designates the accounting period or fiscal year ending date (Jan - Dec) of the organization (MM)</inlineHelpText>
    <label>ACCT PD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>