ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <inlineHelpText>An organization formerly listed up to three activity codes on application Forms 1023 and 1024. These are codes which
reflect an organization&apos;s purposes, activities, operations, or type.</inlineHelpText>
    <label>Activity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>