ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <inlineHelpText>The Affiliation Code defines the organizational grouping.</inlineHelpText>
    <label>Affiliation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>