ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Asset_AMT__c.field-meta.xml
<CustomField>
    <fullName>Asset_AMT__c</fullName>
    <inlineHelpText>Asset Amount is an amount from the most recent Form 990 series return filed by the organization. Asset Amount is the Book Value Total Assets End of Year - PART X Balance Sheet Line 16 Col. (B) shown on the Form 990.</inlineHelpText>
    <label>Asset Amount</label>
    <length>20</length>
    <type>Text</type>
</CustomField>