ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Automatic_Revocation__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Revocation__c</fullName>
    <label>Automatic Revocation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>