ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Billing_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Billing_Pincode__c</fullName>
    <label>Billing Pincode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>