ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Bridge_Number__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Number__c</fullName>
    <label>Bridge Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>