ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <length>20</length>
    <type>Text</type>
</CustomField>