ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Company_Mission__c.field-meta.xml
<CustomField>
    <fullName>Company_Mission__c</fullName>
    <label>Company Mission</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>