ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Deductablity_Status_Desacription__c.field-meta.xml
<CustomField>
    <fullName>Deductablity_Status_Desacription__c</fullName>
    <inlineHelpText>Deductibility Code signifies whether contributions made to an organization are deductible.
Code Description
1 - Contributions are deductible.
2 - Contributions are not deductible.
4 - Contributions are deductible by treaty (foreign organizations).</inlineHelpText>
    <label>Deductablity Code</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>