ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Filing_REQ_CD__c.field-meta.xml
<CustomField>
    <fullName>Filing_REQ_CD__c</fullName>
    <inlineHelpText>This indicates the primary return(s) the organization is required to file.</inlineHelpText>
    <label>Filing REQ CD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>