ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <label>Form Type</label>
    <type>TextArea</type>
</CustomField>