ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Foundation__c.field-meta.xml
<CustomField>
    <fullName>Foundation__c</fullName>
    <label>Foundation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>