ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Foundation_Code__c.field-meta.xml
<CustomField>
    <fullName>Foundation_Code__c</fullName>
    <inlineHelpText>This defines the type of organization as follows:
Code Description
1 Corporation
2 Trust
3 Co-operative
4 Partnership
5 Association</inlineHelpText>
    <label>Organization Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>