ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Foundation_Status__c.field-meta.xml
<CustomField>
    <fullName>Foundation_Status__c</fullName>
    <label>Organization Status</label>
    <type>TextArea</type>
</CustomField>