ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <inlineHelpText>This is a four-digit internal number assigned to central/parent organizations holding group exemption letters.</inlineHelpText>
    <label>Group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>