ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/In_Care_of__c.field-meta.xml
<CustomField>
    <fullName>In_Care_of__c</fullName>
    <inlineHelpText>In Care of Name</inlineHelpText>
    <label>In Care of</label>
    <length>200</length>
    <type>Text</type>
</CustomField>