ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Income_AMT__c.field-meta.xml
<CustomField>
    <fullName>Income_AMT__c</fullName>
    <inlineHelpText>Income Amount is a computer generated amount from the most recent Form 990 series return filed by the organization.
Income Amount is computer generated using PART I, Total Revenue Line 12 and adding &quot;back in&quot; the expense items.</inlineHelpText>
    <label>Income AMT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>