ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Income_CD__c.field-meta.xml
<CustomField>
    <fullName>Income_CD__c</fullName>
    <inlineHelpText>Income Codes relate to the amount of income shown on the most recent Form 990 series return filed by the organization.</inlineHelpText>
    <label>Income CD</label>
    <length>10</length>
    <type>Text</type>
</CustomField>