ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/IRS_Org_Name__c.field-meta.xml
<CustomField>
    <fullName>IRS_Org_Name__c</fullName>
    <label>IRS Organization Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>