ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Most_Recent_BMF__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_BMF__c</fullName>
    <label>Most Recent BMF</label>
    <length>200</length>
    <type>Text</type>
</CustomField>