ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Most_Recent_IRB__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_IRB__c</fullName>
    <label>Most Recent IRB</label>
    <length>100</length>
    <type>Text</type>
</CustomField>