ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Most_Recent_Pub_78__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Pub_78__c</fullName>
    <label>Most Recent Pub 78</label>
    <length>100</length>
    <type>Text</type>
</CustomField>