ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/NTEE_Code__c.field-meta.xml
<CustomField>
    <fullName>NTEE_Code__c</fullName>
    <inlineHelpText>The National Taxonomy of Exempt Entities (NTEE) Code is a four digit code used to classify an exempt organization in
terms of its primary exempt activity.</inlineHelpText>
    <label>NTEE Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>