ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Organaization_Id__c.field-meta.xml
<CustomField>
    <fullName>Organaization_Id__c</fullName>
    <label>Organization Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>