ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/PF_Filing_REQ_CD__c.field-meta.xml
<CustomField>
    <fullName>PF_Filing_REQ_CD__c</fullName>
    <inlineHelpText>PF FILING REQUIREMENT CODE
Code Form Numbers
1 990-PF return
0 No 990-PF return</inlineHelpText>
    <label>PF Filing REQ CD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>