ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Reliability__c.field-meta.xml
<CustomField>
    <fullName>Reliability__c</fullName>
    <formula>IF(Automatic_Revocation__c =&apos;1&apos; , IMAGE(&quot;/img/samples/flag_red.gif&quot;,&apos;&apos;), IMAGE(&quot;/img/samples/flag_green.gif&quot;,&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reliability</label>
    <type>Text</type>
</CustomField>