ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Revocation_Date__c.field-meta.xml
<CustomField>
    <fullName>Revocation_Date__c</fullName>
    <label>Revocation Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>