ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Ruling_Date__c.field-meta.xml
<CustomField>
    <fullName>Ruling_Date__c</fullName>
    <inlineHelpText>This is the month and year (YYYYMM) on a ruling or determination letter recognizing the organization&apos;s exempt status.</inlineHelpText>
    <label>Ruling Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>