ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Ruling_Month__c.field-meta.xml
<CustomField>
    <fullName>Ruling_Month__c</fullName>
    <label>Ruling Month</label>
    <length>200</length>
    <type>Text</type>
</CustomField>