ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>The EO Status Code defines the type of exemption held by the organization. The following is a list of EO status codes and
their definitions:
 Code Description
01 Unconditional Exemption
02 Conditional Exemption
12 Trust described i</inlineHelpText>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>