ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Subsection_Code__c.field-meta.xml
<CustomField>
    <fullName>Subsection_Code__c</fullName>
    <inlineHelpText>Subsection Codes are the codes shown under section 501(c) of the Internal Revenue Code of 1986, which define the category under which an organization may be exempt.</inlineHelpText>
    <label>Subsection Code</label>
    <type>TextArea</type>
</CustomField>