ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Tax_Year__c.field-meta.xml
<CustomField>
    <fullName>Tax_Year__c</fullName>
    <label>Last filed taxes on:</label>
    <length>20</length>
    <type>Text</type>
</CustomField>