ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Total_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Assets__c</fullName>
    <inlineHelpText>Asset Codes relate to the book value amount of assets shown on the most recent Form 990 series return filed by the organization.</inlineHelpText>
    <label>Asset Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>