ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Total_Expense__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense__c</fullName>
    <label>Total Expense</label>
    <length>100</length>
    <type>Text</type>
</CustomField>