ShakeCharity/ShakeSharityApp/force-app/main/default/objects/ShakeCharity__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <inlineHelpText>Amount from Form 990, Part 1, Line 12, or Part 1, Line 9, of Form 990EZ</inlineHelpText>
    <label>Revenue Amount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>